js262/test/language/expressions/assignmenttargettype/direct-primaryexpression-this.js


/*---
description: PrimaryExpression this; Return invalid. (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment
---*/

$DONOTEVALUATE();

this = 1;
